test {
    dependsOn ':cnf:copyMavenLibs'
}
tasks.withType(JavaCompile) {
    options.release = 21
}

